# cornucopia

./: .gitignore  README.md  launch.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: cart.py  cart_item.py  user.py
backend/app/routes/: cart.py  cart_item.py  security.py  user.py  user_login.py  user_refresh_token.py  user_registration.py
backend/app/schemas/: cart.py  cart_item.py  user.py
backend/app/services/: cart.py  cart_item.py  user.py
backend/app/utils/: origin_check.py  security.py
backend/models/: user.py
backend/tests/: test_auth.py
database/: _create_tables.py  create_tables.py
frontend/: index.html
frontend/src/: App.tsx
frontend/src/api/: authApi.ts
frontend/src/api_configs/: configs.ts
frontend/src/features/auth/: useAuth.ts
frontend/src/features/auth/components/: Dashboard.tsx  LoginForm.tsx
frontend/src/features/auth/hooks/: authApi.ts  secureAuthApi.ts  tokenService.ts  useAuth.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/utils/: csrf.ts
